# fitness-house-bot

./: .gitignore  README.md  pyproject.toml
fitness_house_bot/: __main__.py  bot.py  fh_scrape.py
